# abbyy-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
lexical-analyzer/: lex.yy.c  mjlexer.l
src/: declaration.h  expression.h  grammar.h  grammar_decl.h  grammar_def.h  main.cpp  parser.y  scanner.l  statement.h  symbol.cpp  symbol.h  table.h  treeserializer.cpp  treeserializer.h  type.h  visitor.h
src/ast/: declaration.h  expression.h  grammar.h  grammardecl.h  parser.y  scanner.l  statement.h  treedeallocator.cpp  treedeallocator.h  treeserializer.cpp  treeserializer.h  type.h  visitor.h
src/symboltable/: classinfo.cpp  classinfo.h  methodinfo.cpp  methodinfo.h  symbol.cpp  symbol.h  table.cpp  table.h  tableinitializer.cpp  tableinitializer.h  typechecker.cpp  typechecker.h  variableinfo.cpp  variableinfo.h
src/utils/: compilationerror.cpp  compilationerror.h  declarationerror.cpp  declarationerror.h  utils.cpp  utils.h
test/: BinaryTree.java  BinaryTreeMain.java  CMakeLists.txt  Factorial.java  sample0.java  symboltable_test.cpp
